--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.12.0",
     "next": "15.1.2",
     "prisma": "^6.1.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
