--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@hookform/resolvers": "^4.1.0",
+    "@prisma/client": "^6.4.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.12.0",
     "next": "15.1.2",
-    "prisma": "^6.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-toastify": "^11.0.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -28,6 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
     "postcss": "^8",
+    "prisma": "^6.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
